PF-224: Added posibility to set the test title tag name

--- a/app/templates/integrations/grafana.html
+++ b/app/templates/integrations/grafana.html
@@ -66,19 +66,19 @@
                                     <div class="tooltip-container">
                                       <span class="fa-regular fa-circle-question me-2 mt-2"></span>
                                       <div class="tooltip-content">
-                                        The variable name used to select the test title for querying the results. 'testTitle' is default.
+                                        The variable name on dashboard used to select the test title for querying the results. 'testTitle' is default.
                                       </div>
                                     </div>
-                                    <label for="test_title" class="input-label mt-2">Test title tag:</label>
+                                    <label for="test_title" class="input-label mt-2">Test title tag name:</label>
                                     {{ form.test_title(id='test_title', class_='form-control', placeholder="e.g. testTitle") }}
 
                                     <div class="tooltip-container">
                                       <span class="fa-regular fa-circle-question me-2 mt-2"></span>
                                       <div class="tooltip-content">
-                                        The variable name used to select the baseline test title for querying the results. It is used on comparison dashboard. 'baseline_testTitle' is default.
+                                        The variable name on dashboard used to select the baseline test title for querying the results. It is used on comparison dashboard. 'baseline_testTitle' is default.
                                       </div>
                                     </div>
-                                    <label for="baseline_test_title" class="input-label mt-2">Baseline test title tag:</label>
+                                    <label for="baseline_test_title" class="input-label mt-2">Baseline test title tag name:</label>
                                     {{ form.baseline_test_title(id='baseline_test_title', class_='form-control', placeholder="e.g. baseline_testTitle") }}
 
                                     <label for="is_default" class="input-label mt-2">Is Default:</label>
