Added prompts for FE

--- a/app/templates/includes/sidebar.html
+++ b/app/templates/includes/sidebar.html
@@ -45,7 +45,7 @@
     <div class="sidebar-container">
         <div class="sidebar-header">
             <img src="/static/assets/img/logo.png" height="25" alt="PerForge">
-            <a type="button" href="https://perforge.app" target="_blank">PerForge</a>
+            <a class="ms-2" type="button" href="https://perforge.app" target="_blank">PerForge</a>
         </div>
         <div class="nav-links-container">
             <a class="nav-link" type="button" href="/">
