--- a/app/templates/home/template.html
+++ b/app/templates/home/template.html
@@ -374,9 +374,9 @@
                                 { name: '${cpu_long_tasks_table_median}', description: 'CPU long tasks metrics with median aggregation.' },
                                 { name: '${cdp_performance_js_heap_used_size_table_median}', description: 'JavaScript heap used size metrics with median aggregation.' },
                                 { name: '${cdp_performance_js_heap_total_size_table_median}', description: 'JavaScript heap total size metrics with median aggregation.' },
-                                { name: '${content_types_table_}', description: 'Content types metrics with median aggregation.' },
-                                { name: '${first_party_content_types_table_}', description: 'First-party content types metrics with median aggregation.' },
-                                { name: '${third_party_content_types_table_}', description: 'Third-party content types metrics with median aggregation.' }
+                                { name: '${count_per_content_type_table_}', description: 'Content types metrics with median aggregation.' },
+                                { name: '${first_party_transfer_size_table_}', description: 'First-party content types metrics with median aggregation.' },
+                                { name: '${third_party_transfer_size_table_}', description: 'Third-party content types metrics with median aggregation.' }
                             ],
                             summaryVariables: [
                                 { name: '${nfr_summary}', description: 'Summary of Non-Functional Requirements validation.' },
