--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -119,7 +119,7 @@
                         </ul>
                      </div>
                      <div class="center-section">
-                        <p>Current version:<p class="text-primary fw-bold ms-2">{{ current_version }}</p></p>
+                        <p id="version-info" class="fs-5">Current version: <span class="text-primary fw-bold">{{ current_version }}</span></p>
                      </div>
                   </div>
                </div>
@@ -185,7 +185,19 @@
                     });
             }
 
+            async function checkVersion() {
+                const response = await fetch('/check_new_version');
+                const data = await response.json();
+                const versionInfo = document.getElementById('version-info');
+
+                if (data.new_version_released) {
+                    versionInfo.innerHTML = `<i class="fas fa-rocket text-primary me-2"></i> New version <strong class="text-primary">${data.new_version}</strong> is out! <a href="https://github.com/PerForge/PerForge/releases/tag/${data.new_version}" class="fw-bold" target="_blank">See what's new</a>`;
+                }
+            }
+
             document.addEventListener('DOMContentLoaded', function() {
+                checkVersion();
+
                 function getCookie(name) {
                     const value = `; ${document.cookie}`;
                     const parts = value.split(`; ${name}=`);
