Changed db_id to db_config

--- a/app/templates/accounts/login.html
+++ b/app/templates/accounts/login.html
@@ -37,7 +37,7 @@
                     <br />
                 </form>
                 <br />
-                <h4>&copy; 2024 <strong>PerForge</strong>. All rights reserved.</h4>
+                <h4>&copy; 2025 <strong>PerForge</strong>.</h4>
                 {% with msgs = get_flashed_messages() %}
                     {% include 'includes/flashed-msg.html' %}
                 {% endwith %}
